fixing type selector form button sizing issue on mobile

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -176,6 +176,9 @@ div[id^="form"]{
 		@media screen and (min-width: 200px) and (max-width: 750px){
 			width: 75%;
 		}
+		@media screen and (min-width: 300px) and (max-width: 750px) and (orientation: landscape){
+			width: 50%;
+		}
 	}
 	li {
 		min-height: 10rem;
@@ -190,10 +193,16 @@ div[id^="form"]{
 		color: white;
 		padding: .5rem;
 
+		@media screen and (min-width: 300px) and (max-width: 750px) and (orientation: portrait){
+			max-height: 6rem;
+			min-height: 6rem;
+			height: 6rem;
+		}
+
 		@media screen and (min-width: 300px) and (max-width: 750px) and (orientation: landscape){
 			min-height: 0rem;
 			max-height: 5rem;
-			max-width: 24%;
+			max-width: 25%;
 			margin: 1% 2%;
 		}
 
@@ -754,7 +763,7 @@ button#closeDrawer{
 
 //phone Landscape
 //(min-width: 300px) and (max-width: 750px) and (orientation: landscape)
-@media screen and (min-width: 300px) and (max-width: 750px) and (orientation: landscape){
+@media screen and (min-width: 200px) and (max-width: 750px) and (orientation: landscape){
 	#thingActions button{
 		width: 48%;
 		margin: 1%;
@@ -775,7 +784,7 @@ button#closeDrawer{
 	}
 
 	#svgContainer{
-		width: 33%; //overriding grid
+		width: 22%; //overriding grid
 	}
 
 	#statsContainer {
